another minor fix to search results on mobile

--- a/src/components/playlist-tile/playlist-tile.scss
+++ b/src/components/playlist-tile/playlist-tile.scss
@@ -274,6 +274,7 @@ playlist-tile {
 			height: 120px;
 		}
 
+		.sm &,
 		.md & {
 			height: 52px;
 		}
